--- a/WebContent/resources/templates/templateCRUD.xhtml
+++ b/WebContent/resources/templates/templateCRUD.xhtml
@@ -7,7 +7,7 @@
 
 		<p:tab title="Cadastro">
 
-			<h:form prependId="false" id="formCadastro" enctype="multipart/form-data" acceptcharset="utf-8, iso-8859-1">
+			<h:form prependId="false" id="formCadastro" enctype="multipart/form-data" acceptcharset="UTF-8">
 
 				<p:outputPanel id="opCadastro" layout="block" autoUpdate="false" style="width: 98%;">
 
